--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 git:
-  submodules: true
+  submodules: false
 
 cache:
   directories:
@@ -14,6 +14,7 @@ php:
 
 before_install:
   - sudo apt-get update -qq
+  - git submodule update --init --recursive
   - composer self-update
   - composer install
 
